<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_text_margin"
            android:text="@string/about_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_text"
            android:layout_margin="@dimen/about_text_margin"
            android:contentDescription="@string/facebook_link"
            android:src="@drawable/facebook" />

    <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook_logo"
            android:layout_margin="@dimen/about_text_margin"
            android:contentDescription="@string/twitter_link"
            android:src="@drawable/twitter" />

    <TextView
            android:id="@+id/facebook_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/facebook_logo"
            android:layout_toRightOf="@+id/facebook_logo"
            android:layout_margin="@dimen/about_text_margin"
            android:text="@string/facebook_link"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:autoLink="web"
            android:linksClickable="true" />

    <TextView
            android:id="@+id/twitter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/twitter_logo"
            android:layout_toRightOf="@+id/twitter_logo"
            android:layout_margin="@dimen/about_text_margin"
            android:text="@string/twitter_link"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:autoLink="web"
            android:linksClickable="true" />
</RelativeLayout>